@@ -1,3 +1,9 @@
+Thu Nov  9 17:16:29 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* MAINTAINERS: Specify the vax-dec-vms5.5 target tupple.
+	* vax-tdep.c: Include "gdbcore.h", "frame.h" and "value.h".
+	(vax_print_insn): Change ``d'' to a const char pointer.
+
 2000-11-08  Michael Snyder  <msnyder@cleaver.cygnus.com>
 
 	* gdbarch.sh: Spelling correction: registrary -> registry.
